@@ -1,6 +1,6 @@
 <html><body>
-If you are used to Unix text editors you might want a middle-mouse button
-click to insert the most recently selected text in the text area. This can
-be enabled in the <b>Text Area</b> pane of the <b>Utilities</b>&gt;<b>Global
+If you are used to Unix text editors where a middle-mouse button
+click inserts the most recently selected text, enable <b>quick copy</b> in
+the <b>Text Area</b> pane of the <b>Utilities</b>&gt;<b>Global
 Options</b> dialog box.
 </body></html>
